--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -21,5 +21,5 @@ source=custom/rules.conf
 source=custom/keybinds.conf
 
 # nwg-displays support
-source=workspaces.conf
-source=monitors.conf
+source=custom/workspaces.conf
+source=custom/monitors.conf
