--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -23,5 +23,5 @@ source=custom/rules.conf
 source=custom/keybinds.conf
 
 # nwg-displays support
-source=custom/workspaces.conf
-source=custom/monitors.conf
+source=workspaces.conf
+source=monitors.conf
