--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -143,10 +143,10 @@ bind = Super+Alt, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
 # #/# bind = Super+Shift, Scroll ↑/↓,, # Send to workspace left/right
-bind = Super+Shift, mouse_up, movetoworkspace, r-1 # [hidden]
-bind = Super+Shift, mouse_down, movetoworkspace, r+1 # [hidden]
-bind = Super+Alt, mouse_up, movetoworkspace, -1 # [hidden]
-bind = Super+Alt, mouse_down, movetoworkspace, +1 # [hidden]
+bind = Super+Shift, mouse_down, movetoworkspace, r-1 # [hidden]
+bind = Super+Shift, mouse_up, movetoworkspace, r+1 # [hidden]
+bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
+bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
 
 #/# bind = Super+Shift, Page_↑/↓,, # Send to workspace left/right
 bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
@@ -198,10 +198,10 @@ bind = Super, Page_Up, workspace, -1 # [hidden]
 bind = Ctrl+Super, Page_Down, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Page_Up, workspace, r-1 # [hidden]
 #/# bind = Super, Scroll ↑/↓,, # Focus left/right
-bind = Super, mouse_down, workspace, +1 # [hidden]
-bind = Super, mouse_up, workspace, -1 # [hidden]
-bind = Ctrl+Super, mouse_down, workspace, r+1 # [hidden]
-bind = Ctrl+Super, mouse_up, workspace, r-1 # [hidden]
+bind = Super, mouse_up, workspace, +1 # [hidden]
+bind = Super, mouse_down, workspace, -1 # [hidden]
+bind = Ctrl+Super, mouse_up, workspace, r+1 # [hidden]
+bind = Ctrl+Super, mouse_down, workspace, r-1 # [hidden]
 ## Special
 bind = Super, S, togglespecialworkspace, # Toggle scratchpad
 bind = Super, mouse:275, togglespecialworkspace, # [hidden]
